--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.google.code.gson:gson:2.9.0'
 	implementation 'org.hibernate:hibernate-validator:7.0.5.Final'
 	implementation 'org.json:json:20200518'
 	implementation 'javax.servlet:jstl'
